# mace

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_en.md  clippy.toml  rustfmt.toml  test.sh
.github/workflows/: ci.yml  prod-soak.yml
benches/: perf.rs
docs/: design.md
examples/: basic.rs  demo.rs  observer.rs
scripts/: README.md  perf_gate.sh  perf_thresholds.env  pre-commit  prod_soak.sh  prod_test.sh
src/: lib.rs
src/cc/: cc.rs  context.rs  data.rs  dep_group.rs  group.rs  log.rs  mod.rs  recover.rs  transaction.rs  wal.rs  worker.rs
src/index/: builder.rs  data.rs  iter.rs  mod.rs  page.rs  publish.rs  registry.rs  slotted.rs  systxn.rs  tree.rs  txn.rs
src/io/: mod.rs  unix.rs  win.rs
src/map/: buffer.rs  buffer_map.rs  cache.rs  chunk.rs  data.rs  evictor.rs  flow.rs  flush.rs  load.rs  mod.rs  page_map.rs  publish.rs  swip.rs  table.rs
src/meta/: builder.rs  entry.rs  mod.rs
src/store/: gc.rs  mod.rs  node.rs  recovery.rs  store.rs  tuple.rs
src/tree/: data.rs  iter.rs  mod.rs  page.rs  systxn.rs  traits.rs  tree.rs
src/types/: base.rs  data.rs  delta.rs  header.rs  imtree.rs  mod.rs  node.rs  page.rs  refbox.rs  remote.rs  sst.rs  traits.rs
src/utils/: addr_trace.rs  bitmap.rs  block.rs  byte_array.rs  bytes.rs  countblock.rs  data.rs  failpoint.rs  imtree.rs  interval.rs  lru.rs  mod.rs  observe.rs  options.rs  queue.rs  spooky.rs  traits.rs  varint.rs
tests/: anomalies.rs  backpressure.rs  bench.rs  big.rs  bucket.rs  cc.rs  flow_control.rs  gc.rs  junk_reachability.rs  prod_bucket.rs  prod_concurrency.rs  prod_evictor.rs  prod_gc.rs  prod_recovery.rs  prod_recovery_failpoints.rs  prod_workload.rs  recovery.rs  tree.rs
tests/common/: mod.rs
