[package]
name = "mace-kv"
version = "0.0.24"
edition = "2024"
authors = ["AbbyCin <abbytsing@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/abbycin/mace"
repository = "https://github.com/abbycin/mace"
description = "A fast, cross-platform embedded key-value storage engine with ACID, MVCC, and flash-optimized storage"
license = "MIT"
categories = ["database-implementations", "database"]
keywords = ["database", "kv", "btree", "storage", "embedded"]

[lib]
name = "mace"

[dependencies]
crc32c = "0.6.8"
dashmap = "6.1.0"
rand = "0.9.2"
log = "0.4.28"
crossbeam-epoch = "0.9.18"
parking_lot = "0.12.5"
btree-store = "0.1.1"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.177"

[dev-dependencies]
logger = { path = "deps/logger" }

[features]
default = []
extra_check = []
metric = []

[profile.release]
opt-level = 3
lto = true
debug = true

[profile.release-with-symbol]
inherits = "release"
debug = "line-tables-only"
